# mxrc

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.new  GEMINI.md  INSTALLATION_NEXT_STEPS.md  README.md  README_DEPENDENCIES.md  architecture_new.md  test_dual_process.sh
.cache/clangd/index/: AccessControlManager.cpp.F8E00EB8286CD2AF.idx  AccessControlManager.h.F0BCCB01EBD8BD6F.idx  AccessControlManager_test.cpp.3CDF5985B98E4C85.idx  ActionDefinition.h.31FBD673E50739E2.idx  ActionEvents.h.C4F3550408DF1D98.idx  ActionExecutor.cpp.CAED4F1FDC89C19B.idx  ActionExecutor.h.70135712DE794222.idx  ActionExecutor_test.cpp.97E55DA4B51C8D6D.idx  ActionFactory.cpp.85FCD014A09CD69F.idx  ActionFactory.h.963D325E8775B1A0.idx  ActionFactory_test.cpp.231F7E377C97BA44.idx  ActionRegistry.cpp.F06E64412F386880.idx  ActionRegistry.h.0193753E1BBA05B3.idx  ActionRegistry_test.cpp.A710F898656B637C.idx  ActionStatus.h.F83882A85BE5446F.idx  AsyncLogger_test.cpp.B1A044AD35FF9F9A.idx  AsyncWriter.cpp.1E3660755C0BDE7E.idx  AsyncWriter.h.3212571EE3C90C8E.idx  AsyncWriter_test.cpp.5D517C65F5FA07A8.idx  (+179 more)
.claude/commands/: specify.md  speckit.architecture.md  speckit.issue.md  speckit.research.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  task_completion_checklist.md  tech_stack.md
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  architecture-template.md  checklist-template.md  issue-template.md  plan-template.md  spec-template.md  tasks-template.md
cmake/: FindEtherCAT.cmake
config/: alarm-config.yaml  behavior-arbitration.yaml  mock-driver.yaml  prometheus.json  rt_schedule.json  tracing_config.json
config/ethercat/: dc_config.yaml  slaves_sample.yaml
config/ha/: failover_policy.json
config/ipc/: ipc-schema.yaml
config/rt/: README.md  cpu_affinity.json  numa_binding.json  perf_monitor.json
config/systemd/: watchdog.json
dev/agent/: CLAUDE.md  GEMINI.md
docs/: DEPENDENCIES.md  api-reference.md  configuration-guide.md  debugging_with_lldb.md  performance-analysis.md
docs/architecture/: action.md  architecture.md  architecture_new.md  config.md  datastore.md  ethercat-improvements.md  ethercat.md  event.md  ha.md  logging.md  monitoring.md  nonrt.md  rt.md  sequence.md  systemd.md  task.md  tracing.md  unified_system_architecture.md
docs/issue/: 001-Eventbus-segmentation-fault.md  002-datastore-locking-bottleneck.md  003-Mapnotifier-segmentation-fault.md  006-spdlog-async-refactor.md  008-logging-architecture-refactor.md  009-architecture-analysis.md
docs/onboarding/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/research/: 001-datastore-bag-logging-evaluation.md  002-logging-datastore-analysis.md  003-realtime-architecture-analysis.md  004-rt-non-rt-process-separation-analysis.md  005-architecture-and-logging-evaluation.md  006-architecture-analysis-improvements.md  007-architecture-analysis-and-improvement-proposal.md  008-datastore-webui-architecture-proposal.md  009-docker-containerization-analysis.md  010-project-management-architecture-analysis.md
docs/task_mission_management/: README.md
docs/templete/: issue.md
examples/event_monitoring/: ExecutionTimeCollector.cpp  ExecutionTimeCollector.h  StateTransitionLogger.cpp  StateTransitionLogger.h  main.cpp
issue/: 001-Eventbus-segmentation-fault.md  002-datastore-locking-bottleneck.md  003-Mapnotifier-segmentation-fault.md  003-comprehensive-review.md  004-singleton-test-isolation.md  005-datastore-lock-free-metrics.md  007-datastore-god-object-refactor.md
logs/: .gitignore
missions/: simple_mission.xml
monitoring/: README.md
monitoring/grafana/: mxrc-dashboard.json
monitoring/prometheus/: alerts.yml
scripts/: count_tests.sh  install-dependencies.sh  install-systemd-services.sh  monitor-cgroups.sh  prometheus-exporter.py  verify-cgroups.sh
scripts/codegen/: generate_ipc_schema.py  validate_schema.py
specs/: system-specification.md
specs/001-polymorphic-task-management/: data-model.md  plan.md
specs/001-project-overview/: spec.md
specs/001-task-management/: plan.md  quickstart.md  tasks.md
specs/002-motion-positioning/: spec.md
specs/004-task-mission-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-crucial-additional-modules/: spec.md
specs/015-data-store-module/: plan.md  spec.md  tasks.md
specs/016-refactor-taskmanager/: data-model.md  improvement-plan.md  plan.md  spec.md
specs/017-action-sequence-orchestration/: ARCHITECTURE_ANALYSIS.md  architecture.md  plan.md  spec.md  tasks.md
specs/017-datastore-god-object-refactor/: spec.md
specs/017-datastore-performance/: plan.md  spec.md  tasks.md
specs/017-logging/: plan.md  quickstart.md  tasks.md
specs/018-action-executor-stateful-refactoring/: tasks.md
specs/018-async-logging/: data-model.md  spec.md
specs/019-event-enhanced-hybrid/: tasks.md
specs/020-refactor-datastore-locking/: data-model.md  quickstart.md  research.md
specs/021-refactor-rt-logging-ipc/: data-model.md
src/: main.cpp  nonrt_main.cpp  rt_main.cpp
src/systemd/: JournaldLogger.cpp  SystemdMetricsCollector.cpp
systemd/: README.md  install.sh  mxrc-metrics.service  mxrc-monitor.service  mxrc-nonrt.service  mxrc-rt.service  mxrc-webapi.service  mxrc.target  uninstall.sh
tests/benchmark/: hotkey_benchmark.cpp
tests/integration/: action_integration_test.cpp  datastore_logging_integration_test.cpp  hotkey_performance_test.cpp  ipc_schema_integration_test.cpp
tests/mocks/: MockEtherCATMaster.h  MockSlaveConfig.h
tools/: schedule_generator.cpp  validate_schedule.cpp
webapi/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  jest.config.ts  package.json  tsconfig.json
webapi/docs/: RT_IMPACT_ANALYSIS.md  SYSTEMD_DEPLOYMENT.md  websocket-example.md
webapi/scripts/: deploy-docker.sh  install-systemd.sh  monitor-rt-realtime.sh  test-rt-impact.sh  uninstall-systemd.sh  verify-systemd.sh
webapi/src/: server.ts
(+748 files in other folders)
